SVG stroke-dasharray is not animatable https://bugs.webkit.org/show_bug.cgi?id=118574

Reviewed by Dirk Schulze.

Source/WebCore:

Make stroke-dasharray a property that can be animated using CSS transitions.

* page/animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):
(WebCore::CSSPropertyAnimation::ensurePropertyMap):
* rendering/style/RenderStyle.h:

LayoutTests:

Add test for animating stroke-dasharray in addition to the original SVG tests.

* transitions/svg-transitions-expected.txt:
* transitions/svg-transitions.html:

Canonical link: https://commits.webkit.org/137471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153754 268f45cc-cd09-0410-ab3c-d52691b4dbfc